Update order handling and confirmation pages